@@ -1,3 +1,8 @@
+2009-07-27  Jan Beulich  <jbeulich@novell.com>
+
+	* gas/elf/file.[ds]: New.
+	* gas/elf/elf.exp: Run new test.
+
 2009-07-25  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gas/i386/l1om.d: New.
