@@ -1,3 +1,8 @@
+2009-07-27  Jan Beulich  <jbeulich@novell.com>
+
+	* obj-elf.c (elf_file_symbol): Replace symbol name set up by
+	symbol_new() with the passed in, unmodified one.
+
 2009-07-27  M R Swami Reddy <MR.Swami.Reddy@nsc.com>
 
 	* config/tc-cr16.c (md_apply_fix): Put the addend value alone in to
